--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -22,6 +22,7 @@ blocks:
           commands:
             - sudo rm -rf ~/.rbenv ~/.phpbrew
             - checkout && cd ~
+            - cat /proc/cpuinfo
 
             # restore caches
             - export SUM=$(checksum $SEMAPHORE_GIT_DIR/build.gradle)-$(checksum $SEMAPHORE_GIT_DIR/FlowCrypt/build.gradle)-$(checksum $SEMAPHORE_GIT_DIR/script/ci-install-android-sdk.sh)
