--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -8,9 +8,9 @@ agent:
 
 blocks:
 
-  - name: Test
+  - name: Test without mailserver
     execution_time_limit:
-      minutes: 20
+      minutes: 30
     task:
       env_vars:
         - name: SEMAPHORE_GIT_DIR
