Removed logcat from the ACRA reports for the better user privacy. Added an option in the settings to disable ACRA.| #665

--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -209,8 +209,8 @@
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".ui.activity.settings.SecuritySettingsActivity"
-            android:label="@string/security"
+            android:name=".ui.activity.settings.SecurityAndPrivacySettingsActivity"
+            android:label="@string/security_and_privacy"
             android:screenOrientation="portrait" />
 
         <activity
