--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -42,6 +42,7 @@ blocks:
             - ~/Android/Sdk/emulator/emulator -list-avds # debug
             - ~/Android/Sdk/emulator/emulator -avd ci-test-pixel-x86-64-api28 -no-audio & # start emulator in the background
             - $SEMAPHORE_GIT_DIR/script/ci-wait-for-emulator.sh # wait till ready
+            - ( cd $SEMAPHORE_GIT_DIR && ./script/ci-disable-emulator-animations.sh )
             - ( cd $SEMAPHORE_GIT_DIR && ./script/ci-tests-without-mailserver.sh )
 
             # store caches
