Tried to use 'emulator-headless' instead of 'emulator'.| #667

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -40,9 +40,8 @@ blocks:
             - ~/Android/Sdk/emulator/emulator -accel-check # debug
             - echo -ne '\n' | ~/Android/Sdk/tools/bin/avdmanager -v create avd --name ci-test-pixel-x86-64-api28 --package "system-images;android-28;google_apis;x86_64" --device 'pixel' --abi 'google_apis/x86_64'
             - ~/Android/Sdk/emulator/emulator -list-avds # debug
-            - ~/Android/Sdk/emulator/emulator -avd ci-test-pixel-x86-64-api28 -no-audio & # start emulator in the background
+            - ~/Android/Sdk/emulator/emulator-headless -avd ci-test-pixel-x86-64-api28 -no-boot-anim -no-audio & # start emulator in the background
             - $SEMAPHORE_GIT_DIR/script/ci-wait-for-emulator.sh # wait till ready
-            - ( cd $SEMAPHORE_GIT_DIR && ./script/ci-disable-emulator-animations.sh )
             - ( cd $SEMAPHORE_GIT_DIR && ./script/ci-tests-without-mailserver.sh )
 
             # store caches
