--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -256,8 +256,10 @@ easylauncher {
                     customColorRibbonFilter("debug", "#556600CC", "#FFFFFF", "bottom")
             ]
         }
+    }
 
-        enterprise {
+    variants {
+        devEnterprise {
             filters = [
                     customColorRibbonFilter("enterprise", "#55CC5F00", "#FFFFFF", "bottom")
             ]
