Updated the Android Gradle plugin to 3.5.0.

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -2,9 +2,9 @@
 # © 2016-2019 FlowCrypt Limited. Limitations apply. Contact human@flowcrypt.com
 # Contributors: DenBond7
 #
-#Wed Jan 16 08:54:10 EET 2019
+#Wed Aug 21 21:08:54 EEST 2019
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-5.1.1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-5.4.1-all.zip
