--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -257,32 +257,16 @@ easylauncher {
             ]
         }
     }
-
-    variants {
-        devEnterprise {
-            filters = [
-                    customColorRibbonFilter("enterprise", "#55CC5F00", "#FFFFFF", "bottom")
-            ]
-        }
-    }
-}
-
-configurations {
-    prodDebugImplementation {}
-    prodReleaseImplementation {}
-    prodEnterpriseImplementation {}
 }
 
 dependencies {
-    prodDebugImplementation "com.squareup.leakcanary:leakcanary-android:${rootProject.ext.leakcanaryVersion}"
-    prodReleaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:${rootProject.ext.leakcanaryVersion}"
-    prodEnterpriseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:${rootProject.ext.leakcanaryVersion}"
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:${rootProject.ext.leakcanaryVersion}"
+    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:${rootProject.ext.leakcanaryVersion}"
 
     androidTestImplementation "androidx.test.espresso:espresso-core:${rootProject.ext.espressoVersion}"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:${rootProject.ext.espressoVersion}"
     androidTestImplementation "androidx.test.espresso:espresso-intents:${rootProject.ext.espressoVersion}"
     androidTestImplementation "androidx.test.espresso:espresso-web:${rootProject.ext.espressoVersion}"
-    //https://mvnrepository.com/artifact/androidx.test.ext/junit
     androidTestImplementation "androidx.test.ext:junit:1.1.1"
 
     testImplementation "com.squareup.leakcanary:leakcanary-android-no-op:${rootProject.ext.leakcanaryVersion}"
@@ -327,7 +311,7 @@ dependencies {
     kapt "androidx.annotation:annotation:${rootProject.ext.androidxBaseVersion}"
 
     implementation 'commons-io:commons-io:2.6'
-    prodImplementation 'ch.acra:acra:4.11'
+    implementation 'ch.acra:acra:4.11'
     implementation 'com.hootsuite.android:nachos:1.1.1'
     implementation 'com.nulab-inc:zxcvbn:1.2.5'
     implementation 'com.madgag.spongycastle:pkix:1.54.0.0'
