--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -103,17 +103,12 @@ android {
             resValue 'string', 'gradle_http_log_level', 'NONE'
             resValue 'string', 'gradle_is_node_http_debug_enabled', 'false'
             resValue 'string', 'gradle_node_http_log_level', 'NONE'
-        }
-
-        enterprise {
-            initWith release
-            applicationIdSuffix ".enterprise"
+            signingConfig signingConfigs.release
         }
 
         debug {
             versionNameSuffix '_' + defaultConfig.versionCode + '__' + new SimpleDateFormat('yyyy_MM_dd').format(new Date())
             applicationIdSuffix '.debug'
-            resValue 'string', 'application_id', android.defaultConfig.applicationId + applicationIdSuffix
             signingConfig signingConfigs.debug
         }
     }
@@ -139,7 +134,6 @@ android {
         //This flavor must be used only for a development.
         // It has settings for a fast building (some features are disabled or not included).
         dev {
-            signingConfig signingConfigs.debug
             buildConfigField 'boolean', 'IS_ACRA_ENABLED', 'false'
             buildConfigField 'boolean', 'IS_MAIL_DEBUG_ENABLED', 'true'
             buildConfigField 'boolean', 'IS_HTTP_LOG_ENABLED', 'true'
@@ -160,7 +154,6 @@ android {
 
         //This is a production flavor
         prod {
-            signingConfig signingConfigs.release
             buildConfigField 'boolean', 'IS_ACRA_ENABLED', 'true'
             buildConfigField 'boolean', 'IS_MAIL_DEBUG_ENABLED', 'false'
             buildConfigField 'boolean', 'IS_HTTP_LOG_ENABLED', 'true'
@@ -189,6 +182,26 @@ android {
             buildConfigField 'String', 'HTTP_LOG_LEVEL', "\"NONE\""
             buildConfigField 'boolean', 'IS_NODE_HTTP_DEBUG_ENABLED', 'false'
             buildConfigField 'String', 'NODE_HTTP_LOG_LEVEL', "\"NONE\""
+        }
+
+        //This is an enterprise flavor
+        enterprise {
+            applicationIdSuffix ".enterprise"
+            buildConfigField 'boolean', 'IS_ACRA_ENABLED', 'true'
+            buildConfigField 'boolean', 'IS_MAIL_DEBUG_ENABLED', 'false'
+            buildConfigField 'boolean', 'IS_HTTP_LOG_ENABLED', 'true'
+            buildConfigField 'String', 'HTTP_LOG_LEVEL', "\"BASIC\""
+            buildConfigField 'boolean', 'IS_NODE_HTTP_DEBUG_ENABLED', 'true'
+            buildConfigField 'String', 'NODE_HTTP_LOG_LEVEL', "\"BASIC\""
+            resValue 'string', 'gradle_is_acra_enabled', 'true'
+            resValue 'string', 'gradle_is_mail_debug_enabled', 'false'
+            resValue 'string', 'gradle_is_http_log_enabled', 'false'
+            resValue 'string', 'gradle_is_node_http_debug_enabled', 'false'
+            resValue 'string', 'gradle_is_http_log_enabled', 'true'
+            resValue 'string', 'gradle_http_log_level', 'BASIC'
+            resValue 'string', 'gradle_is_node_http_debug_enabled', 'true'
+            resValue 'string', 'gradle_node_http_log_level', 'BASIC'
+            dimension "standard"
         }
     }
 
@@ -245,6 +258,10 @@ android {
         if (taskPackageProdEnterprise != null) {
             taskPackageProdEnterprise.finalizedBy renameReleaseBuilds
         }
+
+        android.applicationVariants.all { variant ->
+            variant.resValue 'string', 'application_id', variant.applicationId
+        }
     }
 }
 
@@ -253,7 +270,7 @@ easylauncher {
     buildTypes {
         debug {
             filters = [
-                    customColorRibbonFilter("debug", "#556600CC", "#FFFFFF", "bottom")
+                    customColorRibbonFilter("", "#556600CC", "#FFFFFF", "bottom", 0.05)
             ]
         }
     }
