--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -179,7 +179,12 @@ android {
             buildConfigField 'String', 'HTTP_LOG_LEVEL', "\"NONE\""
             buildConfigField 'boolean', 'IS_NODE_HTTP_DEBUG_ENABLED', 'false'
             buildConfigField 'String', 'NODE_HTTP_LOG_LEVEL', "\"NONE\""
-        }
+            resValue 'string', 'gradle_is_mail_debug_enabled', 'false'
+            resValue 'string', 'gradle_is_http_log_enabled', 'false'
+            resValue 'string', 'gradle_http_log_level', 'NONE'
+            resValue 'string', 'gradle_is_node_http_debug_enabled', 'false'
+            resValue 'string', 'gradle_node_http_log_level', 'NONE'
+        }k
 
         //This is an enterprise flavor
         enterprise {
