Fixed copying release builds.| Close #704

--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -258,6 +258,11 @@ android {
             taskPackageConsumerEnterprise.finalizedBy renameReleaseBuilds
         }
 
+        Task renameReleaseBuilds = tasks.findByName('renameReleaseBuilds')
+        if (renameReleaseBuilds != null) {
+            renameReleaseBuilds.finalizedBy copyReleaseApks
+        }
+
         android.applicationVariants.all { variant ->
             variant.resValue 'string', 'application_id', variant.applicationId
         }
