Replaced attester/lookup with attester/pub.| Close #663

--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -330,6 +330,7 @@ dependencies {
 
     implementation "com.squareup.retrofit2:retrofit:${rootProject.ext.retrofitVersion}"
     implementation "com.squareup.retrofit2:converter-gson:${rootProject.ext.retrofitVersion}"
+    implementation "com.squareup.retrofit2:converter-scalars:${rootProject.ext.retrofitVersion}"
     implementation "com.squareup.okhttp3:logging-interceptor:${rootProject.ext.okhttpVersion}"
     implementation 'com.jakewharton:disklrucache:2.0.2'
 
