Added an ability to modify screenshot before sending.| #680

--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -350,4 +350,5 @@ dependencies {
     implementation 'com.nulab-inc:zxcvbn:1.2.5'
     implementation 'com.madgag.spongycastle:pkix:1.54.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
+    implementation 'ja.burhanrashid52:photoeditor:0.4.0'
 }
