Added MessagesMovingJobService. Refactored code.| #504

--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -286,6 +286,11 @@
             android:permission="android.permission.BIND_JOB_SERVICE" />
 
         <service
+            android:name=".jobscheduler.MessagesMovingJobService"
+            android:exported="false"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
+
+        <service
             android:name=".jobscheduler.ForwardedAttachmentsDownloaderJobService"
             android:exported="false"
             android:permission="android.permission.BIND_JOB_SERVICE" />
