--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -312,7 +312,9 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:${rootProject.ext.androidxBaseVersion}"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.test.espresso:espresso-idling-resource:${rootProject.ext.espressoVersion}"
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation "androidx.lifecycle:lifecycle-extensions:${rootProject.ext.lifecycleVersion}"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${rootProject.ext.lifecycleVersion}"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:${rootProject.ext.lifecycleVersion}"
 
     //https://developers.google.com/android/guides/setup
     implementation 'com.google.android.gms:play-services-base:17.1.0'
