--- a/ext.gradle
+++ b/ext.gradle
@@ -15,6 +15,8 @@ ext {
     javaSourceCompatibility = '1.7'
     /*https://developer.android.com/jetpack/androidx/androidx-rn*/
     androidxBaseVersion = '1.0.0'
+    /* https://developer.android.com/jetpack/androidx/releases/lifecycle*/
+    lifecycleVersion = '2.2.0-rc01'
     /* https://mvnrepository.com/artifact/androidx.test.espresso*/
     espressoVersion = '3.2.0'
     /*https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit*/
