--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -334,6 +334,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:${rootProject.ext.retrofitVersion}"
     implementation "com.squareup.retrofit2:converter-scalars:${rootProject.ext.retrofitVersion}"
     implementation "com.squareup.okhttp3:logging-interceptor:${rootProject.ext.okhttpVersion}"
+    implementation "com.squareup.okhttp3:mockwebserver:${rootProject.ext.okhttpVersion}"
     implementation 'com.jakewharton:disklrucache:2.0.2'
 
     implementation "com.sun.mail:android-mail:${rootProject.ext.javaMailVersion}"
