--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -96,6 +96,7 @@ android {
             buildConfigField 'String', 'HTTP_LOG_LEVEL', "\"NONE\""
             buildConfigField 'boolean', 'IS_NODE_HTTP_DEBUG_ENABLED', 'false'
             buildConfigField 'String', 'NODE_HTTP_LOG_LEVEL', "\"NONE\""
+            buildConfigField 'String', 'API_URL', "\"https://flowcrypt.com/api/\""
             resValue 'string', 'application_id', android.defaultConfig.applicationId
             resValue 'string', 'gradle_is_mail_debug_enabled', 'false'
             resValue 'string', 'gradle_is_http_log_enabled', 'false'
@@ -139,6 +140,7 @@ android {
             buildConfigField 'String', 'HTTP_LOG_LEVEL', "\"BODY\""
             buildConfigField 'boolean', 'IS_NODE_HTTP_DEBUG_ENABLED', 'true'
             buildConfigField 'String', 'NODE_HTTP_LOG_LEVEL', "\"BODY\""
+            buildConfigField 'String', 'API_URL', "\"https://flowcrypt.com/api/\""
             resValue 'string', 'gradle_is_mail_debug_enabled', 'true'
             resValue 'string', 'gradle_is_http_log_enabled', 'true'
             resValue 'string', 'gradle_http_log_level', 'BODY'
@@ -158,6 +160,7 @@ android {
             buildConfigField 'String', 'HTTP_LOG_LEVEL', "\"BASIC\""
             buildConfigField 'boolean', 'IS_NODE_HTTP_DEBUG_ENABLED', 'true'
             buildConfigField 'String', 'NODE_HTTP_LOG_LEVEL', "\"BASIC\""
+            buildConfigField 'String', 'API_URL', "\"https://flowcrypt.com/api/\""
             resValue 'string', 'gradle_is_mail_debug_enabled', 'false'
             resValue 'string', 'gradle_is_http_log_enabled', 'false'
             resValue 'string', 'gradle_is_node_http_debug_enabled', 'false'
@@ -178,6 +181,7 @@ android {
             buildConfigField 'String', 'HTTP_LOG_LEVEL', "\"NONE\""
             buildConfigField 'boolean', 'IS_NODE_HTTP_DEBUG_ENABLED', 'false'
             buildConfigField 'String', 'NODE_HTTP_LOG_LEVEL', "\"NONE\""
+            buildConfigField 'String', 'API_URL', "\"https://flowcrypt.com/api/\""
             resValue 'string', 'gradle_is_mail_debug_enabled', 'false'
             resValue 'string', 'gradle_is_http_log_enabled', 'false'
             resValue 'string', 'gradle_http_log_level', 'NONE'
@@ -194,6 +198,28 @@ android {
             buildConfigField 'String', 'HTTP_LOG_LEVEL', "\"BASIC\""
             buildConfigField 'boolean', 'IS_NODE_HTTP_DEBUG_ENABLED', 'true'
             buildConfigField 'String', 'NODE_HTTP_LOG_LEVEL', "\"BASIC\""
+            buildConfigField 'String', 'API_URL', "\"https://flowcrypt.com/api/\""
+            resValue 'string', 'gradle_is_acra_enabled', 'true'
+            resValue 'string', 'gradle_is_mail_debug_enabled', 'false'
+            resValue 'string', 'gradle_is_http_log_enabled', 'false'
+            resValue 'string', 'gradle_is_node_http_debug_enabled', 'false'
+            resValue 'string', 'gradle_is_http_log_enabled', 'true'
+            resValue 'string', 'gradle_http_log_level', 'BASIC'
+            resValue 'string', 'gradle_is_node_http_debug_enabled', 'true'
+            resValue 'string', 'gradle_node_http_log_level', 'BASIC'
+            dimension "standard"
+        }
+
+        //This is a test enterprise flavor
+        enterpriseTest {
+            applicationIdSuffix ".enterprise"
+            buildConfigField 'boolean', 'IS_ACRA_ENABLED', 'true'
+            buildConfigField 'boolean', 'IS_MAIL_DEBUG_ENABLED', 'false'
+            buildConfigField 'boolean', 'IS_HTTP_LOG_ENABLED', 'true'
+            buildConfigField 'String', 'HTTP_LOG_LEVEL', "\"BASIC\""
+            buildConfigField 'boolean', 'IS_NODE_HTTP_DEBUG_ENABLED', 'true'
+            buildConfigField 'String', 'NODE_HTTP_LOG_LEVEL', "\"BASIC\""
+            buildConfigField 'String', 'API_URL', "\"http://localhost:1212/\""
             resValue 'string', 'gradle_is_acra_enabled', 'true'
             resValue 'string', 'gradle_is_mail_debug_enabled', 'false'
             resValue 'string', 'gradle_is_http_log_enabled', 'false'
