--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -96,6 +96,7 @@ android {
             buildConfigField 'String', 'HTTP_LOG_LEVEL', "\"NONE\""
             buildConfigField 'boolean', 'IS_NODE_HTTP_DEBUG_ENABLED', 'false'
             buildConfigField 'String', 'NODE_HTTP_LOG_LEVEL', "\"NONE\""
+            buildConfigField 'String', 'ATTESTER_URL', "\"https://flowcrypt.com/attester/\""
             buildConfigField 'String', 'API_URL', "\"https://flowcrypt.com/api/\""
             resValue 'string', 'application_id', android.defaultConfig.applicationId
             resValue 'string', 'gradle_is_mail_debug_enabled', 'false'
@@ -140,6 +141,7 @@ android {
             buildConfigField 'String', 'HTTP_LOG_LEVEL', "\"BODY\""
             buildConfigField 'boolean', 'IS_NODE_HTTP_DEBUG_ENABLED', 'true'
             buildConfigField 'String', 'NODE_HTTP_LOG_LEVEL', "\"BODY\""
+            buildConfigField 'String', 'ATTESTER_URL', "\"https://flowcrypt.com/attester/\""
             buildConfigField 'String', 'API_URL', "\"https://flowcrypt.com/api/\""
             resValue 'string', 'gradle_is_mail_debug_enabled', 'true'
             resValue 'string', 'gradle_is_http_log_enabled', 'true'
@@ -160,6 +162,7 @@ android {
             buildConfigField 'String', 'HTTP_LOG_LEVEL', "\"BASIC\""
             buildConfigField 'boolean', 'IS_NODE_HTTP_DEBUG_ENABLED', 'true'
             buildConfigField 'String', 'NODE_HTTP_LOG_LEVEL', "\"BASIC\""
+            buildConfigField 'String', 'ATTESTER_URL', "\"https://flowcrypt.com/attester/\""
             buildConfigField 'String', 'API_URL', "\"https://flowcrypt.com/api/\""
             resValue 'string', 'gradle_is_mail_debug_enabled', 'false'
             resValue 'string', 'gradle_is_http_log_enabled', 'false'
@@ -181,6 +184,7 @@ android {
             buildConfigField 'String', 'HTTP_LOG_LEVEL', "\"NONE\""
             buildConfigField 'boolean', 'IS_NODE_HTTP_DEBUG_ENABLED', 'false'
             buildConfigField 'String', 'NODE_HTTP_LOG_LEVEL', "\"NONE\""
+            buildConfigField 'String', 'ATTESTER_URL', "\"https://flowcrypt.com/attester/\""
             buildConfigField 'String', 'API_URL', "\"https://flowcrypt.com/api/\""
             resValue 'string', 'gradle_is_mail_debug_enabled', 'false'
             resValue 'string', 'gradle_is_http_log_enabled', 'false'
@@ -198,6 +202,7 @@ android {
             buildConfigField 'String', 'HTTP_LOG_LEVEL', "\"BASIC\""
             buildConfigField 'boolean', 'IS_NODE_HTTP_DEBUG_ENABLED', 'true'
             buildConfigField 'String', 'NODE_HTTP_LOG_LEVEL', "\"BASIC\""
+            buildConfigField 'String', 'ATTESTER_URL', "\"https://flowcrypt.com/attester/\""
             buildConfigField 'String', 'API_URL', "\"https://flowcrypt.com/api/\""
             resValue 'string', 'gradle_is_acra_enabled', 'true'
             resValue 'string', 'gradle_is_mail_debug_enabled', 'false'
@@ -219,6 +224,7 @@ android {
             buildConfigField 'String', 'HTTP_LOG_LEVEL', "\"BASIC\""
             buildConfigField 'boolean', 'IS_NODE_HTTP_DEBUG_ENABLED', 'true'
             buildConfigField 'String', 'NODE_HTTP_LOG_LEVEL', "\"BASIC\""
+            buildConfigField 'String', 'ATTESTER_URL', "\"http://localhost:1212/\""
             buildConfigField 'String', 'API_URL', "\"http://localhost:1212/\""
             resValue 'string', 'gradle_is_acra_enabled', 'true'
             resValue 'string', 'gradle_is_mail_debug_enabled', 'false'
