--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -333,6 +333,7 @@ dependencies {
 
     testImplementation "com.squareup.leakcanary:leakcanary-android-no-op:${rootProject.ext.leakcanaryVersion}"
     testImplementation "junit:junit:${rootProject.ext.junitVersion}"
+    testImplementation "androidx.room:room-testing:$roomVersion"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -347,6 +348,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:${rootProject.ext.lifecycleVersion}"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${rootProject.ext.lifecycleVersion}"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:${rootProject.ext.lifecycleVersion}"
+    implementation "androidx.room:room-runtime:$roomVersion"
+    implementation "androidx.room:room-ktx:$roomVersion"
 
     //https://developers.google.com/android/guides/setup
     implementation 'com.google.android.gms:play-services-base:17.1.0'
@@ -378,6 +381,7 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:${rootProject.ext.glideVersion}"
     kapt "com.github.bumptech.glide:compiler:${rootProject.ext.glideVersion}"
     kapt "androidx.annotation:annotation:${rootProject.ext.androidxBaseVersion}"
+    kapt "androidx.room:room-compiler:$roomVersion"
 
     implementation 'commons-io:commons-io:2.6'
     implementation 'ch.acra:acra:4.11'
