--- a/ext.gradle
+++ b/ext.gradle
@@ -17,6 +17,8 @@ ext {
     androidxBaseVersion = '1.0.0'
     /* https://developer.android.com/jetpack/androidx/releases/lifecycle*/
     lifecycleVersion = '2.2.0-rc01'
+    /* https://developer.android.com/jetpack/androidx/releases/room#declaring_dependencies*/
+    roomVersion = '2.2.2'
     /* https://mvnrepository.com/artifact/androidx.test.espresso*/
     espressoVersion = '3.2.0'
     /*https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit*/
