--- a/ext.gradle
+++ b/ext.gradle
@@ -19,6 +19,8 @@ ext {
     lifecycleVersion = '2.2.0-rc01'
     /* https://developer.android.com/jetpack/androidx/releases/room#declaring_dependencies*/
     roomVersion = '2.2.2'
+    /* https://developer.android.com/jetpack/androidx/releases/paging#declaring_dependencies*/
+    pagingVersion = '2.1.0'
     /* https://mvnrepository.com/artifact/androidx.test.espresso*/
     espressoVersion = '3.2.0'
     /*https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit*/
