--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -350,7 +350,8 @@ dependencies {
     implementation "androidx.legacy:legacy-preference-v14:${rootProject.ext.androidxBaseVersion}"
     implementation "androidx.cardview:cardview:${rootProject.ext.androidxBaseVersion}"
     implementation "androidx.browser:browser:${rootProject.ext.androidxBaseVersion}"
-    implementation "androidx.recyclerview:recyclerview:${rootProject.ext.androidxBaseVersion}"
+    implementation "androidx.recyclerview:recyclerview:${rootProject.ext.recyclerViewVersion}"
+    implementation "androidx.recyclerview:recyclerview-selection:${rootProject.ext.recyclerViewVersion}-beta01"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.test.espresso:espresso-idling-resource:${rootProject.ext.espressoVersion}"
     implementation "androidx.lifecycle:lifecycle-extensions:${rootProject.ext.lifecycleVersion}"
