--- a/ext.gradle
+++ b/ext.gradle
@@ -15,6 +15,8 @@ ext {
     javaSourceCompatibility = '1.7'
     /*https://developer.android.com/jetpack/androidx/androidx-rn*/
     androidxBaseVersion = '1.0.0'
+    /* https://developer.android.com/jetpack/androidx/releases/recyclerview*/
+    recyclerViewVersion = '1.1.0'
     /* https://developer.android.com/jetpack/androidx/releases/lifecycle*/
     lifecycleVersion = '2.2.0-rc01'
     /* https://developer.android.com/jetpack/androidx/releases/room#declaring_dependencies*/
