--- a/ext.gradle
+++ b/ext.gradle
@@ -28,7 +28,9 @@ ext {
     /*https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit*/
     retrofitVersion = '2.7.1'
     /*https://mvnrepository.com/artifact/com.squareup.okhttp3/logging-interceptor*/
-    okhttpVersion = '3.12.1'
+    okhttpVersion = '4.3.1'
+    /*https://mvnrepository.com/artifact/com.squareup.okio/okio*/
+    okioVersion = '2.4.3'
     /*https://mvnrepository.com/artifact/com.squareup.leakcanary/leakcanary-android*/
     leakcanaryVersion = '1.6.3'
     /*https://mvnrepository.com/artifact/com.sun.mail/android-mail*/
