--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -47,6 +47,7 @@ android {
             abiFilters "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
         }
 
+        // used by Room, to test migrations
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
@@ -128,13 +129,16 @@ android {
         }
     }
 
-    // If you want Gradle to package prebuilt native libraries
-    // with your APK, modify the default source set configuration
-    // to include the directory of your prebuilt .so files as follows.
     sourceSets {
+        // If you want Gradle to package prebuilt native libraries
+        // with your APK, modify the default source set configuration
+        // to include the directory of your prebuilt .so files as follows.
         main {
             jniLibs.srcDirs 'libs/libnode/bin/'
         }
+
+        // used by Room, to test migrations
+        androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
     }
 
     flavorDimensions "standard"
@@ -330,6 +334,10 @@ easylauncher {
 }
 
 dependencies {
+    kapt "com.github.bumptech.glide:compiler:${rootProject.ext.glideVersion}"
+    kapt "androidx.annotation:annotation:${rootProject.ext.androidxBaseVersion}"
+    kapt "androidx.room:room-compiler:$roomVersion"
+
     debugImplementation "com.squareup.leakcanary:leakcanary-android:${rootProject.ext.leakcanaryVersion}"
 
     androidTestImplementation "androidx.test.espresso:espresso-core:${rootProject.ext.espressoVersion}"
@@ -337,6 +345,10 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-intents:${rootProject.ext.espressoVersion}"
     androidTestImplementation "androidx.test.espresso:espresso-web:${rootProject.ext.espressoVersion}"
     androidTestImplementation "androidx.test.ext:junit:1.1.1"
+    androidTestImplementation "androidx.test:runner:1.2.0"
+    androidTestImplementation "androidx.test:rules:1.2.0"
+    androidTestImplementation "androidx.room:room-testing:$roomVersion"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 
     testImplementation "junit:junit:${rootProject.ext.junitVersion}"
     testImplementation "androidx.room:room-testing:$roomVersion"
@@ -387,15 +399,11 @@ dependencies {
     }
 
     implementation "com.github.bumptech.glide:glide:${rootProject.ext.glideVersion}"
-    kapt "com.github.bumptech.glide:compiler:${rootProject.ext.glideVersion}"
-    kapt "androidx.annotation:annotation:${rootProject.ext.androidxBaseVersion}"
-    kapt "androidx.room:room-compiler:$roomVersion"
-
-    implementation 'commons-io:commons-io:2.6'
-    implementation 'ch.acra:acra:4.11'
     implementation 'com.hootsuite.android:nachos:1.1.1'
     implementation 'com.nulab-inc:zxcvbn:1.3.0'
     implementation 'com.madgag.spongycastle:pkix:1.54.0.0'
+    implementation 'commons-io:commons-io:2.6'
+    implementation 'ch.acra:acra:4.11'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     implementation 'ja.burhanrashid52:photoeditor:1.0.0'
 }
