--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -5,9 +5,11 @@ agent:
   machine:
     type: e1-standard-4
     os_image: ubuntu1804
+  containers:
+    - name: main
+      image: semaphoreci/android:29-node
 
 blocks:
-
   - name: Test without mailserver
     execution_time_limit:
       minutes: 30
@@ -30,25 +32,28 @@ blocks:
             - export ANDROID_SDK_CACHE=android-sdk-$SUM  # per conf files hash
             - export BUILD_NATIVE_CACHE=build-native-cache-$SEMAPHORE_GIT_BRANCH-$SUM  # per branch and conf files hash
             - export BUILD_CACHE=build-cache-$SEMAPHORE_GIT_BRANCH-$SUM  # per branch and conf files hash
-            - cache restore $ANDROID_SDK_CACHE
+            #- cache restore $ANDROID_SDK_CACHE
             - cache restore $GRADLE_CACHE
             - cache restore $BUILD_NATIVE_CACHE
             - cache restore $BUILD_CACHE
 
-            # build + test
-            - $SEMAPHORE_GIT_DIR/script/ci-install-android-sdk.sh
+            # Install android emulator
+            - sdkmanager "platform-tools" "platforms;android-29" "emulator"
+            - sdkmanager "system-images;android-29;google_apis;x86_64"
+            - echo no | avdmanager -v create avd --name ci-test-pixel-x86-64-api29 --package "system-images;android-29;google_apis;x86_64" --device 'pixel' --abi 'google_apis/x86_64'
+            # Run Android emulator
             - ~/Android/Sdk/emulator/emulator -accel-check # debug
-            - echo -ne '\n' | ~/Android/Sdk/tools/bin/avdmanager -v create avd --name ci-test-pixel-x86-64-api29 --package "system-images;android-29;google_apis;x86_64" --device 'pixel' --abi 'google_apis/x86_64'
             - ~/Android/Sdk/emulator/emulator -list-avds # debug
             - ~/Android/Sdk/emulator/emulator -no-window -avd ci-test-pixel-x86-64-api29 -no-boot-anim -no-audio & # start emulator in the background
             - $SEMAPHORE_GIT_DIR/script/ci-wait-for-emulator.sh # wait till ready
             # - ( cd $SEMAPHORE_GIT_DIR && ./script/ci-disable-emulator-animations.sh )
+            # run tests
             - ( cd $SEMAPHORE_GIT_DIR && ./script/ci-tests-without-mailserver.sh )
 
             # store caches
             - find ~/.gradle/caches/ -name "*.lock" -type f -delete # https://medium.com/cirruslabs/mastering-gradle-caching-and-incremental-builds-37eb1af7fcde
             - cache has_key $GRADLE_CACHE || cache store $GRADLE_CACHE .gradle
-            - cache has_key $ANDROID_SDK_CACHE || cache store $ANDROID_SDK_CACHE Android
+            #- cache has_key $ANDROID_SDK_CACHE || cache store $ANDROID_SDK_CACHE Android
             - cache has_key $BUILD_NATIVE_CACHE || cache store $BUILD_NATIVE_CACHE git/flowcrypt-android/FlowCrypt/.externalNativeBuild
             - cache has_key $BUILD_CACHE || cache store $BUILD_CACHE git/flowcrypt-android/FlowCrypt/build
 
