--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -7,7 +7,7 @@ agent:
     os_image: ubuntu1804
   containers:
     - name: main
-      image: semaphoreci/android:29-node
+      image: semaphoreci/android:29
 
 blocks:
   - name: Test without mailserver
@@ -23,16 +23,12 @@ blocks:
             - sudo rm -rf ~/.rbenv ~/.phpbrew
             - checkout && cd ~
             - cat /proc/cpuinfo
-            - echo $PATH
-            - ls /opt/android-sdk-linux/emulator
 
             # restore caches
             - export SUM=$(checksum $SEMAPHORE_GIT_DIR/build.gradle)-$(checksum $SEMAPHORE_GIT_DIR/FlowCrypt/build.gradle)-$(checksum $SEMAPHORE_GIT_DIR/script/ci-install-android-sdk.sh)
             - export GRADLE_CACHE=gradle-cache-$SUM # per conf files hash
-            - export ANDROID_SDK_CACHE=android-sdk-$SUM  # per conf files hash
             - export BUILD_NATIVE_CACHE=build-native-cache-$SEMAPHORE_GIT_BRANCH-$SUM  # per branch and conf files hash
             - export BUILD_CACHE=build-cache-$SEMAPHORE_GIT_BRANCH-$SUM  # per branch and conf files hash
-            #- cache restore $ANDROID_SDK_CACHE
             - cache restore $GRADLE_CACHE
             - cache restore $BUILD_NATIVE_CACHE
             - cache restore $BUILD_CACHE
@@ -42,6 +38,7 @@ blocks:
             - sdkmanager "system-images;android-29;google_apis;x86_64"
             - echo no | avdmanager -v create avd --name ci-test-pixel-x86-64-api29 --package "system-images;android-29;google_apis;x86_64" --device 'pixel' --abi 'google_apis/x86_64'
             # Run Android emulator
+            - emulator -accel-check # debug
             - emulator -list-avds # debug
             - emulator -no-window -avd ci-test-pixel-x86-64-api29 -no-boot-anim -no-audio & # start emulator in the background
             - $SEMAPHORE_GIT_DIR/script/ci-wait-for-emulator.sh # wait till ready
@@ -52,7 +49,6 @@ blocks:
             # store caches
             - find ~/.gradle/caches/ -name "*.lock" -type f -delete # https://medium.com/cirruslabs/mastering-gradle-caching-and-incremental-builds-37eb1af7fcde
             - cache has_key $GRADLE_CACHE || cache store $GRADLE_CACHE .gradle
-            #- cache has_key $ANDROID_SDK_CACHE || cache store $ANDROID_SDK_CACHE Android
             - cache has_key $BUILD_NATIVE_CACHE || cache store $BUILD_NATIVE_CACHE git/flowcrypt-android/FlowCrypt/.externalNativeBuild
             - cache has_key $BUILD_CACHE || cache store $BUILD_CACHE git/flowcrypt-android/FlowCrypt/build
 
