--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -12,7 +12,7 @@ agent:
 blocks:
   - name: Test without mailserver
     execution_time_limit:
-      minutes: 30
+      minutes: 10
     task:
       env_vars:
         - name: SEMAPHORE_GIT_DIR
@@ -27,27 +27,28 @@ blocks:
             # restore caches
             - export SUM=$(checksum $SEMAPHORE_GIT_DIR/build.gradle)-$(checksum $SEMAPHORE_GIT_DIR/FlowCrypt/build.gradle)-$(checksum $SEMAPHORE_GIT_DIR/script/ci-install-android-sdk.sh)
             - export GRADLE_CACHE=gradle-cache-$SUM # per conf files hash
+            - export ANDROID_SDK_CACHE=android-sdk-$SUM  # per conf files hash
             - export BUILD_NATIVE_CACHE=build-native-cache-$SEMAPHORE_GIT_BRANCH-$SUM  # per branch and conf files hash
             - export BUILD_CACHE=build-cache-$SEMAPHORE_GIT_BRANCH-$SUM  # per branch and conf files hash
+            - cache restore $ANDROID_SDK_CACHE
             - cache restore $GRADLE_CACHE
             - cache restore $BUILD_NATIVE_CACHE
             - cache restore $BUILD_CACHE
 
-            # Install android emulator
-            - sdkmanager "platform-tools" "platforms;android-24" "emulator"
-            - sdkmanager "system-images;android-24;default;armeabi-v7a"
-            - echo no | avdmanager create avd -n Nexus_S_API_24 -k "system-images;android-24;default;armeabi-v7a" --device "Nexus S"
-            # Run Android emulator
+            # build + test
+            - $SEMAPHORE_GIT_DIR/script/ci-install-android-sdk.sh
+            - emulator -accel-check # debug
+            - echo -ne '\n' | avdmanager -v create avd --name ci-test-pixel-x86-64-api29 --package "system-images;android-29;google_apis;x86_64" --device 'pixel' --abi 'google_apis/x86_64'
             - emulator -list-avds # debug
-            - emulator -no-window -avd Nexus_S_API_24 -no-boot-anim -no-audio & # start emulator in the background
+            - emulator -no-window -avd ci-test-pixel-x86-64-api29 -no-boot-anim -no-audio & # start emulator in the background
             - $SEMAPHORE_GIT_DIR/script/ci-wait-for-emulator.sh # wait till ready
             # - ( cd $SEMAPHORE_GIT_DIR && ./script/ci-disable-emulator-animations.sh )
-            # run tests
             - ( cd $SEMAPHORE_GIT_DIR && ./script/ci-tests-without-mailserver.sh )
 
             # store caches
             - find ~/.gradle/caches/ -name "*.lock" -type f -delete # https://medium.com/cirruslabs/mastering-gradle-caching-and-incremental-builds-37eb1af7fcde
             - cache has_key $GRADLE_CACHE || cache store $GRADLE_CACHE .gradle
+            - cache has_key $ANDROID_SDK_CACHE || cache store $ANDROID_SDK_CACHE Android
             - cache has_key $BUILD_NATIVE_CACHE || cache store $BUILD_NATIVE_CACHE git/flowcrypt-android/FlowCrypt/.externalNativeBuild
             - cache has_key $BUILD_CACHE || cache store $BUILD_CACHE git/flowcrypt-android/FlowCrypt/build
 
